<resources>
    <string name="app_name">Higher Lower</string>
    <string name="description">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="equal">Equal</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="dice_image_desc">Dice image</string>
</resources>
